--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -1,4 +1,4 @@
-{% macro render_field(field, label=None, label_visible=true, right_url=None, right_label=None) -%}
+{% macro render_field(field, label=None, label_visible=true, right_url=None, right_label=None, helpText=false) -%}
     <div class="form-group {% if field.errors %}has-error{% endif %} {{ kwargs.pop('class_', '') }}">
         {% if field.type != 'HiddenField' and label_visible %}
             {% if not label %}{% set label=field.label.text %}{% endif %}
@@ -7,18 +7,24 @@
         {{ field(class_='form-control', placeholder=label, **kwargs) }}
         {% if field.errors %}
             {% for e in field.errors %}
-                <p class="help-block">{{ e }}</p>
+                <span class="help-block">{{ e }}</span>
             {% endfor %}
+        {% endif %}
+        {% if helpText %}
+            <span class="help-block">{{ helpText|safe }}</span>
         {% endif %}
     </div>
 {%- endmacro %}
  
-{% macro render_checkbox_field(field, label=None) -%}
+{% macro render_checkbox_field(field, label=None, helpText=false) -%}
     {% if not label %}{% set label=field.label.text %}{% endif %}
     <div class="checkbox">
         <label>
             {{ field(type='checkbox', **kwargs) }} {{ label }}
         </label>
+        {% if helpText %}
+            <span class="help-block">{{ helpText|safe }}</span>
+        {% endif %}
     </div>
 {%- endmacro %}
  
