Add URL/text to Sexual Recovery link in portal.

--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -16,9 +16,9 @@
     <div id="showUM" class="portal-box">
         <h4>Sexual Recovery</h4>
         <p>Treatment can impact sexual function. Assess your particular needs and see specific strategies for both you and your partner to develop a new normal in your sex life.</p>
-        <a class="btn feature-btn-primary" href="">Go to SR</a>
-    </div>
+        <a class="btn feature-btn-primary" href="{{ intervention.card_url }}">{{ intervention.card_html }}
     {% endif %}
+
     <div id="moreContent">
         <h4>The TrueNTH Experience</h4>
         <p>Lorem ipsum dolor sit met, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna a liqua. Ut enim ad minim venom, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comido consequat. Luis aute irure dolor in reprehenderit in voluptate relit esse cillim dolore eu fuggita nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit animé id est labour.</p>
