Fixed P3P card div id

--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -24,7 +24,7 @@
     <div id="showP3P" class="portal-box">
         <h4>Decision Support (P3P)</h4>
         <p>You're unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
-        <a class="btn feature-btn-primary" href="{{ intervention.card_url }}">{{ intervention.card_html }}
+        <a class="btn feature-btn-primary" href="{{ intervention.card_url }}">{{ intervention.card_html }}</a>
     {% endif %}
 
     <div id="moreContent">
