Removed the period from 'Online tools for navigating the prostate cancer journey.', per Donna Berry's request

--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -13,7 +13,7 @@
     <img src="{{ url_for('static', filename='img/bg_canoe.jpg') }}" class="img-responsive img-back" />
     <div class="feature-box">
         <div class="logo"><img src="{{ url_for('static', filename='img/logo_wordmark.png') }}" alt="TrueNTH" /></div>
-        <div class="headline">Online tools for navigating the prostate cancer journey.</div>
+        <div class="headline">Online tools for navigating the prostate cancer journey</div>
         <a href="/user/register" class="btn feature-btn feature-btn-primary">Sign Up</a>
     </div>
     <div class="feature-bottom">
