--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -6,7 +6,7 @@
     <div class="feature-container" style="margin: 0 -20px" id="featureContainer">
         <img src="{{ url_for('static', filename='img/band_forest.jpg') }}" class="img-responsive img-back" />
         <div class="band-box">
-            <div class="headline">Online tools for navigating the prostate cancer journey.</div>
+            <div class="headline">Online tools for navigating the prostate cancer journey</div>
         </div>
     </div>
 
